:wrench: Add some fields to debian control
Signed-off-by: kei-g <km.8k6ce+github@gmail.com>

--- a/control
+++ b/control
@@ -1,6 +1,10 @@
 Architecture: all
 Depends: dbus (>=1.12.16-2), libxml2-utils (>=2.9.10)
 Description: DBus Introspector
+Homepage: https://github.com/kei-g/dbus-introspect
 Maintainer: kei-g <km.8k6ce+debpkg@gmail.com>
 Package: dbus-introspect
-Version: 1.0
+Priority: optional
+Section: admin
+Source: dbus-introspect
+Version: 1.0.0
